--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@ body {
   cursor: pointer;
   background-color: #4CAF50; /*Green*/
 }
+
+a {
+  border: none;
+  color: white;
+  padding: 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+  cursor: pointer;
+  background-color: rgb(85, 87, 83); 
+  }
+  
+  a:hover {
+  background-color: RoyalBlue;
+  color: white;
+}
 </style>
 </head>
 <body>
